--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,19 +1,19 @@
 - title: General Information
   type: map
   contents:
-    - name: Full Name
-      value: Albert Einstein
+    - name:  NameFull
+      value: Leonardo Di Gaetano
     - name: Date of Birth
-      value: 14th March 1879
+      value: 17thh December 1996
     - name: Languages
-      value: English, German
+      value: English, Italian, German, Spanish
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: MSc
+      institution: University of Catania, Catania, Italy
+      year: 2020
       description:
         - Description 1.
         - Description 2.
@@ -21,9 +21,9 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+    - title: BSc
+      institution: University of Catania, Catania, Italy
+      year: 2018
       description:
         - Description 1.
         - Description 2.
