--- a/_config.yml
+++ b/_config.yml
@@ -118,18 +118,18 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-# blog_name: al-folio # blog_name will be displayed in your blog page
-# blog_nav_title: # your blog must have a title for it to be displayed in the nav bar
-# blog_description: a simple whitespace theme for academics
-# permalink: /blog/:year/:title/
+blog_name: al-folio # blog_name will be displayed in your blog page
+blog_nav_title: # your blog must have a title for it to be displayed in the nav bar
+blog_description: a simple whitespace theme for academics
+permalink: 
 
 # Pagination
 pagination:
   enabled: true
 
-# related_blog_posts:
-#   enabled: false
-#   max_related: 5
+related_blog_posts:
+  enabled: false
+  max_related: 5
 
 # Giscus comments (RECOMMENDED)
 # Follow instructions on https://giscus.app/ to setup for your repo to fill out
@@ -160,15 +160,15 @@ external_sources:
 # Collections
 # -----------------------------------------------------------------------------
 
-# collections:
-#   news:
-#     defaults:
-#       layout: post
-#     output: false
-#     permalink: /news/:path/
-#   projects:
-#     output: false
-#     permalink: /projects/:path/
+collections:
+  news:
+    defaults:
+      layout: post
+    output: false
+    permalink: /news/:path/
+  projects:
+    output: false
+    permalink: /projects/:path/
 
 announcements:
   enabled: false
