--- a/_config.yml
+++ b/_config.yml
@@ -165,10 +165,10 @@ collections:
     defaults:
       layout: post
     output: false
-    permalink: /news/:path/
+    # permalink: /news/:path/
   projects:
     output: false
-    permalink: /projects/:path/
+    # permalink: /projects/:path/
 
 announcements:
   enabled: false
