--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: leonardodigaetano # your GitHub user name
+github_username: LeonardoDiGaetano # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: leodigaetano # your Twitter handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
