link on projects

--- a/_config.yml
+++ b/_config.yml
@@ -168,7 +168,7 @@ collections:
     # permalink: /news/:path/
   projects:
     output: false
-    # permalink: /projects/:path/
+    permalink: /projects/:path/
 
 announcements:
   enabled: false
