--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name:
 last_name: Di Gaetano
 email: leonardo.digaetano.96@gamil.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  Portfolio webpage of Leonardo Di Gaetano.
 footer_text: >
   Powered by Leonardo Di Gaetano.
 keywords: Leonardo Di Gaetano, Leo Di Gaetano, Di Gaetano, leodigaetano # add your own keywords or leave empty
