--- a/_config.yml
+++ b/_config.yml
@@ -4,15 +4,12 @@
 
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Leo
-<<<<<<< HEAD
 middle_name: 
 last_name: Di Gaetano   
 email: leonardo.digaetano.96<at>gmail.com
-=======
 middle_name:
 last_name: Di Gaetano
 email: leonardo.digaetano.96[at]gamil.com
->>>>>>> f08f908f894b926976bcccf95458d78c0fb31dbf
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Portfolio webpage of Leonardo Di Gaetano.
 footer_text: >
@@ -117,7 +114,7 @@ contact_note: >
 google_analytics:  # your Google Analytics measurement ID (format: G-XXXXXXXXXX)
 cronitor_analytics:  # cronitor RUM analytics site ID (format: XXXXXXXXX)
 
-google_site_verification:  # your google-site-verification ID (Google Search Console)
+google_site_verification: google35d43f979059c842.html # your google-site-verification ID (Google Search Console)
 bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 
 # -----------------------------------------------------------------------------
